added egualt notebooks, removed unnecessary changes

--- a/notebooks/viviano_beck_example.ipynb
+++ b/notebooks/viviano_beck_example.ipynb
@@ -139,8 +139,9 @@
     "\n",
     "stretch_rgb = {'r':3, 'g':3, 'b':3} # change these values to stretch\n",
     "\n",
-    "r,g,b = crism_algs.bp_FM2(data) # change this function to see a different browse product\n",
-    "\n",
+    "r = crism_algs.bd530(data)\n",
+    "g = crism_algs.bd920(data)\n",
+    "b = crism_algs.bd530(data)\n",
     "\n",
     "r = band_scale(r, stretch_rgb['r'])\n",
     "g = band_scale(g, stretch_rgb['g'])\n",
